sourceforge (2.6-0+14+) experimental; urgency=low

  * [Christian] Add the possibility to hide forum in news_show_latest
  * [Christian] Added the possibility of a language by theme customization
  * [Christian] Included full Spanish translation from Vicente Ruiz.  Thanks
    again

 -- Christian Bayle <bayle@debian.org>  Tue, 26 Nov 2002 00:13:55 +0100

sourceforge (2.6-0+14) experimental; urgency=low

  * [Roland] Uuencoded all binary files in the source package, so that
    dpkg-source can build a .diff.gz from the .orig.tar.gz.  debian/rules
    changed accordingly to uudecode the *.uu files at build time, and to
    remove the resulting files at clean time.
  * [Christian] Made trove cat more editable
  * [Roland] Added integrity constraints between the tables related to the
    Trove map.
  * [Roland] Bumped Standards-Version to 3.5.7 and DH_COMPAT to 4.
    Changed Build-Depends-Indep accordingly.
  * [Roland] Applied patch from Vicente Ruiz <vjrj@ourproject.org> to fix
    LDAP installation.
  * [Roland] Added an <IfModule apache_ssl.c> test in sf-httpd.conf so
    that SSL is enabled on Apache-SSL (as opposed to Apache / mod_ssl)
    servers.  Thanks, Kees Louwen <keeslouwen@hotmail.com>.
  * [Christian] Added delete capability in trove map edit
  * [Christian] Added setup_onevar_mainfile function in dsf helper to add
    vars in sourceforge.conf not managed by debconf
  * [Christian] More i18n in /my and /account
  * [Christian] Make user menu themeable
  * [Christian] Applied Mathieu Peltier <Mathieu.Peltier@inrialpes.fr>
    patch to send mail to admin when a project is submitted, and modified
    it to send the mail to all members of siteadmin (id=1) group, also
    applied ftp patch partly.
  * [Christian] Added translation tool in admin (Visualisation only at the
    moment)
  * [Roland] Added missing dependency on php4-cgi for package
    sourceforge-web-apache.
  * [Roland] [From 2.5] Sort documents by title.